llvm/test/tools/llvm-ifs/conflict-size.ifs
# RUN: not llvm-ifs -action write-ifs -o - %s %S/object.ifs 2>&1 | \
# RUN: FileCheck %s --check-prefixes=CHECK-IFS

# Here we are testing to see if two symbols with identical names will fail to
# merge in conflict due to mismatching sizes.
# CHECK-IFS: error: Interface Stub: Size Mismatch for b.
# CHECK-IFS-NEXT: Filename:
# CHECK-IFS-NEXT: Size Values: 1 4

--- !experimental-ifs-v2
IfsVersion: 2.0
Triple: x86_64-unknown-linux-gnu
ObjectFileFormat: ELF
Symbols:
  - { Name: b, Type: Object, Size: 1 }
...
